--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>C&D wedding present</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Roboto:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="before_date" style="display: none">
-        <h1>Still some time left for your wedding</h1>
+        <h1>Hi! you need to wait a little to open your present</h1>
+        <img src="./Gift - GIF.gif" alt="">
+        <h1>Time left:</h1>
         <h2 id="countdown"></h2>
-
-
     </div>
+    
     <div id="after_date" style="display: none">
         <h1>Congratulations on this special day</h1>
         <h2>Jeanette and me would like to share a present with you</h2>
@@ -21,6 +25,7 @@
         <h1>Welcome <a href="https://www.bydalensfjallby.se/">here</a></h1>
         
     </div>
+  
     <script src="./script.js"></script>
 </body>
 </html>
