--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
     
     <div id="after_date" style="display: none">
         <h1>Congratulations on this special day</h1>
-        <h2>Jeanette and me would like to share a present with you</h2>
+        <h2>Jeanette and me would like to share a present with you!!</h2>
         <h3>We think, spending some days in the swedish wilderness, 
             will be a nice return to your other home in the north hemisfere.</h3>
-        <h1>Welcome <a href="https://www.bydalensfjallby.se/">here</a></h1>
+        <h1>Welcome to Bydalen!</h1>
+        <a href="https://www.instagram.com/boibydalen/" target=”_blank”><img src="./bydalen_profile.jpg" alt=""></a>
         
     </div>
   
