--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div id="before_date" style="display: none">
-        <h1>Hi! you need to wait a little to open your present</h1>
+        <h1>Hi! You can open your gift 1 week before the wedding</h1>
         <br>
         <br>
         <img src="./Gift - GIF.gif" alt="">
